# s10-mini-capstone

./: .gitignore  README.md  agent.py  decision.py  main.py  perception.py  pyproject.toml  state.py
config/: mcp_server_config.yaml  models.json  profiles.yaml
mcp_servers/: mcp_server_2.py  mcp_server_3.py
memory/: memory_state1.json  session-20251126-210651.json  session-20251126-211042.json  session-20251126-211438.json  session-20251126-211615.json  session-20251126-211647.json  session-20251126-211922.json  session-20251126-212348.json  session-20251127-200434.json  session-20251127-201517.json  session-20251127-201933.json  session-20251127-212440.json  session-20251127-213857.json  session-20251127-214354.json  session-20251127-214752.json  session-20251127-215023.json  session-20251127-215134.json  session-20251127-215210.json  session-20251127-215835.json  session-20251127-220013.json  session-20251127-220053.json  session-20251127-220148.json  session-20251127-220244.json
prompts/: decision_prompt.txt  perception_prompt.txt
